--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">34.226.13.20</domain>
+        <domain includeSubdomains="true">http://10.130.218.95 </domain>
         <domain includeSubdomains="true">dataservice.accuweather.com</domain>
     </domain-config>
 </network-security-config>
